fixed mobile footer spacing

--- a/components/footer/footer.module.css
+++ b/components/footer/footer.module.css
@@ -2,7 +2,7 @@
   composes: container from global;
   height: 100px;
   z-index: 10000;
-  font-size: 12px;
+  font-size: 0.875rem;
   display: flex;
   align-items: center;
   color: var(--gray);
@@ -25,7 +25,7 @@
 
 .left > *,
 .download > a {
-  padding: 0 6px;
+  padding: 0 0.5rem;
 }
 
 .download {
@@ -50,11 +50,11 @@
 
 @media (max-width: 496px) {
   .root {
-    margin-top: 64px;
+    margin-top: 4rem;
   }
 
   .content {
-    padding-bottom: 64px;
+    padding-bottom: 4rem;
   }
 
   .content,
@@ -63,7 +63,7 @@
   }
 
   .left {
-    margin-bottom: 24px;
+    margin-bottom: 1.5rem;
   }
 
   .left > *:not(:first-child) {
@@ -71,6 +71,6 @@
   }
 
   .left > *:not(:last-child) {
-    margin-bottom: 8px;
+    margin-bottom: 1.5rem;
   }
 }
